add the classes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   web: ^1.0.0
   plugin_platform_interface: ^2.0.2
   internet_connection_checker: ^3.0.1
+  dart_either: ^2.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
