add network layer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_core
 description: "A new Flutter project."
 version: 0.0.1
-homepage:
 
 environment:
   sdk: ^3.9.0
@@ -18,6 +17,7 @@ dependencies:
   dart_either: ^2.0.0
   shared_preferences: ^2.5.3
   graphql_flutter: ^5.2.1
+  logger: ^2.6.1
 
 dev_dependencies:
   flutter_test:
