--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,34 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   web: ^1.0.0
+  get_it: ^8.2.0
   plugin_platform_interface: ^2.0.2
   internet_connection_checker: ^3.0.1
   dart_either: ^2.0.0
   shared_preferences: ^2.5.3
   graphql_flutter: ^5.2.1
   logger: ^2.6.1
+  flutter_bloc: ^9.1.1
+  intl: ^0.20.2
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.7.0
+  injectable: ^2.1.1
+  timezone: ^0.10.1
+  my_localizations:
+    path: ../my_localizations
+  path_provider: ^2.1.5
+  collection: ^1.19.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.1
   flutter_lints: ^5.0.0
+  injectable_generator: ^2.1.1
+  bloc_test: ^10.0.0
+  freezed: ^3.2.3
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
