--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.1.5
   collection: ^1.19.1
   http: ^1.2.1
+  home_widget: ^0.8.0
 
 dev_dependencies:
   flutter_test:
