--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   collection: ^1.19.1
   http: ^1.2.1
   home_widget: ^0.8.0
+  speech_to_text: ^7.3.0
+  camera: ^0.11.3
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
